

Table users{ 
  id uuid [primary key] 
  email varchar [unique] 
  password varchar 
  created_at timestamp 
  updated_at timestamp 
} 

Table clients { 
  id uuid [primary key] 
  user_id uuid [ref: - users.id] 
  created_at timestamp 
  updated_at timestamp 

} 

Table technicians{ 
  id uuid [primary key] 
  user_id uuid [ref: - users.id] 
}

Table admins{ 
  id uuid [primary key] 
  user_id uuid [ref: - users.id] 
} 

Table roles{ 
  id uuid [primary key] 
  name role_names 
} 

Table roles_x_user{
  id uuid [primary key]
  role_id  uuid [ref: - roles.id]
  user_id uuid [ref: - users.id]
}

Table vehicles { 
  id uuid [primary key] 
  client_id uuid [ref: > clients.id] 
  model_id uuid [ref: > models.id] 
  year varchar 
  plate varchar 
  color varchar 
  name varchar 
} 

Table spares { 
  id uuid [primary key] 
  model_id uuid [ref: - models.id] 
  name varchar 
  sku varchar 
  code varchar 
  price number 
} 


Table models { 
  id uuid [primary key] 
  brand_id uuid [ref: > brands.id] 
  name varchar 
} 

Table brands { 
  id uuid [primary key] 
  name varchar 
} 

enum service_status { 
  created  
  waiting_approval 
  approved 
  in_progress 
  completed 
} 

Table services { 
  id uuid [primary key] 
  vehicle_id uuid [ref: > vehicles.id] 
  technician_id uuid [ref: - technicians.id] 
  status  service_status 
  created_at timestamp 
  updated_at timestamp 
} 

Table labours { 
  id uuid [primary key] 
  technician_id uuid [ref: - technicians.id] 
  price number 
  description varchar 
} 

Table service_details { 
  id uuid [primary key] 
  service_id uuid [ref: > services.id] 
  technician_id uuid [ref: - technicians.id] 
  created_at timestamp 
  updated_at timestamp 
} 

Table spares_x_service { 
  id uuid [primary key] 
  service_id uuid [ref: <> services.id] 
  spare_id uuid [ref: <> spares.id] 
} 

Table labours_x_service { 
  id uuid [primary key] 
  service_id uuid [ref: <> services.id] 
  labour_id uuid [ref: <> labours.id] 
} 


Table notes_x_service_detail{ 
  id uuid [primary key] 
  service_details_id uuid [ref: <> service_details.id] 
  service_notes_id uuid [ref: <> service_notes.id] 
} 

Table media_x_service_detail{ 
  id uuid [primary key] 
  service_details_id uuid [ref: <> service_details.id] 
  media_id uuid [ref: <> media.id] 
} 

Table service_notes { 
  id uuid [primary key] 
  note  varchar 
  created_at timestamp 
  updated_at timestamp 
} 

Table media { 
  id uuid [primary key] 
  url varchar 
  name varchar 
  created_at timestamp 
  updated_at timestamp 
} 



enum role_names{ 
  system_administrator 
  client 
  technician  
} 